# electronics_store

./: main.py  pyproject.toml
data/: items_no_name.csv  items_no_price.csv  items_no_quantity.csv
tests/: test_utils.py
utils/: utils.py
